--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -424,6 +424,21 @@
   commitment_deadline: '2025-04-10 23:59:59'
   note: ARR commitment deadline on April 10th, 2025.
 
+- title: RLC
+  year: 2025
+  id: rlc25
+  full_name: Reinforcement Learning Conference
+  link: https://rl-conference.cc/
+  deadline: '2025-02-28 23:59:59'
+  abstract_deadline: '2025-02-21 23:59:59'
+  timezone: UTC-12
+  date: August 5 - August 8, 2025
+  place: Edmonton, Canada
+  tags:
+  - machine-learning
+  note: Mandatory abstract deadline on Feb 21, 2025.
+
+
 - title: IROS
   year: 2025
   id: iros25
