Do not add duplicates

--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -424,6 +424,26 @@
   commitment_deadline: '2025-04-10 23:59:59'
   note: ARR commitment deadline on April 10th, 2025.
 
+- title: MathAI 2025
+  year: 2025
+  id: MathAI2025
+  full_name: The International Conference dedicated to mathematics in artificial intelligence
+  link: https://mathai.club
+  deadline: 2025-02-20 23:59
+  abstract_deadline: 2025-02-01 23:59
+  timezone: Russia/Moscow
+  place: Sirius, Sochi, Russia
+  date: March, 24-28, 2025
+  start: 2025-03-24
+  end: 2025-03-28
+  paperslink: https://openreview.net/group?id=mathai.club/MathAI/2025/Conference
+  pwclink: https://openreview.net/group?id=mathai.club/MathAI/2025/Conference
+  hindex: 100.0
+  tags:
+  - machine-learning
+  - mathematics
+  note: Abstract deadline on February 1, 2025. More info <a href='https://mathai.club/call-for-papers'>here</a>
+
 - title: RLC
   year: 2025
   id: rlc25
@@ -437,7 +457,6 @@
   tags:
   - machine-learning
   note: Mandatory abstract deadline on Feb 21, 2025.
-
 
 - title: IROS
   year: 2025
@@ -573,23 +592,3 @@
   - natural-language-processing
   rankings: 'CCF: B, CORE: A*, THCPL: A'
   venue: Suzhou, China
-
-- title: MathAI 2025
-  year: 2025
-  id: MathAI2025
-  full_name: The International Conference dedicated to mathematics in artificial intelligence
-  link: https://mathai.club
-  deadline: '2025-02-20 23:59'
-  abstract_deadline: '2025-02-01 23:59'
-  timezone: Russia/Moscow
-  place: Sirius, Sochi, Russia
-  date: March, 24-28, 2025
-  start: 2025-03-24
-  end: 2025-03-28
-  paperslink: https://openreview.net/group?id=mathai.club/MathAI/2025/Conference
-  pwclink: https://openreview.net/group?id=mathai.club/MathAI/2025/Conference
-  hindex: 100.0
-  tags:
-  - machine-learning
-  - mathematics
-  note: Abstract deadline on February 1, 2025. More info <a href='https://mathai.club/call-for-papers'>here</a>
