Add reinforcement learning category

--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -456,6 +456,7 @@
   place: Edmonton, Canada
   tags:
   - machine-learning
+  - reinforcement-learning
   note: Mandatory abstract deadline on Feb 21, 2025.
 
 - title: IROS
