--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -557,7 +557,7 @@
   link: https://ecai2025.org/deadlines/
   deadline: '2025-05-06 23:59:59'
   timezone: UTC-12
-  place: Bologna, ITALY
+  place: Bologna, Italy
   date: October 25-30, 2025
   tags:
   - machine-learning
