--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -15,6 +15,25 @@
     - lifelong-learning
   note: Abstract deadline on February 26, 2025. More info <a href='https://lifelong-ml.cc/Conferences/2025/call'>here</a>
 
+
+- title: CoRL
+  year: 2025
+  id: corl25
+  full_name: Conference on Robot Learning
+  link: https://www.corl.org/
+  deadline: '2025-04-30 23:59:00'
+  abstract_deadline: '2025-04-23 23:59:00'
+  timezone: UTC-12
+  place: Seoul, Korea
+  date: Sep 27-30, 2025
+  tags:
+  - machine-learning
+  - robotics
+  start: '2025-09-27'
+  end: '2025-09-30'
+  venue: COEX Convention & Exhibition Center, Seoul, South Korea
+
+
 - title: ICRA
   year: 2025
   id: icra25
