added IEEE International Conference on Data Mining 2025 into yml file

--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -628,3 +628,14 @@
   - natural-language-processing
   rankings: 'CCF: B, CORE: A, THCPL: B'
   venue: Vienna, Austria
+
+- title: ICDM
+  year: 2025
+  id: icdm25
+  full_name: IEEE International Conference on Data Mining
+  link: https://www3.cs.stonybrook.edu/~icdm2025/index.html
+  deadline: '2025-06-06 23:59:59'
+  timezone: AoE
+  date: November 12 - November 15, 2025
+  place: Washington DC, USA
+  tags: data-mining
