added European Conference on Computer Vision 2026 in yml file

--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -639,3 +639,14 @@
   date: November 12 - November 15, 2025
   place: Washington DC, USA
   tags: data-mining
+
+- title: EECV
+  year: 2026
+  id: eecv26
+  full_name: European Conference on Computer Vision
+  link: https://eccv.ecva.net/Conferences/2026
+  deadline: '2026-03-06 11:00:00'
+  timezone: UTC+0
+  date: September 8 - September 13, 2026
+  place: Malmö, Sweden
+  tags: computer-vision
