--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -39,7 +39,7 @@
 - title: ICRA
   year: 2025
   id: icra25
-  full_name: IEEE International Conference on Robotics and Automation
+  full_name: International Conference on Robotics and Automation
   link: https://2025.ieee-icra.org
   deadline: '2024-07-15 12:00:00'
   timezone: UTC-4
@@ -57,7 +57,7 @@
 - title: WACV
   year: 2025
   id: wacv25
-  full_name: IEEE/CVF Winter Conference on Applications of Computer Vision
+  full_name: Winter Conference on Applications of Computer Vision
   link: https://wacv2025.thecvf.com/
   deadline: '2024-07-15 23:59:59'
   timezone: UTC-7
@@ -114,7 +114,7 @@
 - title: ICASSP
   year: 2025
   id: icassp25
-  full_name: IEEE International Conference on Acoustics, Speech and Signal Processing
+  full_name: International Conference on Acoustics, Speech and Signal Processing
   link: https://2025.ieeeicassp.org/
   deadline: '2024-09-09 23:59:59'
   timezone: UTC-12
@@ -290,7 +290,7 @@
 - title: CVPR
   year: 2025
   id: cvpr25
-  full_name: IEEE/CVF Conference on Computer Vision and Pattern Recognition
+  full_name: Conference on Computer Vision and Pattern Recognition
   link: https://cvpr.thecvf.com/Conferences/2025/CallForPapers
   deadline: '2024-11-14 23:59:00'
   timezone: UTC-8
@@ -339,7 +339,7 @@
 - title: CEC
   year: 2025
   id: cec2025
-  full_name: IEEE Congress on Evolutionary Computation
+  full_name: Congress on Evolutionary Computation
   link: https://www.cec2025.org/
   deadline: '2025-01-15 23:59:59'
   timezone: UTC-12
@@ -533,7 +533,7 @@
 - title: IROS
   year: 2025
   id: iros25
-  full_name: IEEE\RSJ International Conference on Intelligent Robots and Systems
+  full_name: International Conference on Intelligent Robots and Systems
   link: http://www.iros25.org/
   deadline: '2025-03-01 23:59:59'
   timezone: UTC-8
@@ -576,12 +576,12 @@
 - title: ICCV
   year: 2025
   id: iccv25
-  full_name: IEEE International Conference on Computer Vision
+  full_name: International Conference on Computer Vision
   link: https://iccv.thecvf.com/Conferences/2025
   deadline: '2025-03-08 09:59:59'
   timezone: UTC+0
   city: Honolulu
-  country: USA
+  country: Hawaii
   date: October 19-25, 2025
   tags:
   - machine-learning
@@ -696,7 +696,7 @@
 - title: ICDM
   year: 2025
   id: icdm25
-  full_name: IEEE International Conference on Data Mining
+  full_name: International Conference on Data Mining
   link: https://www3.cs.stonybrook.edu/~icdm2025/index.html
   deadline: '2025-06-06 23:59:59'
   timezone: AoE
