--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -578,15 +578,17 @@
   id: iccv25
   full_name: International Conference on Computer Vision
   link: https://iccv.thecvf.com/Conferences/2025
-  deadline: '2025-03-08 09:59:59'
-  timezone: UTC+0
+  deadline: '2025-03-03 23:59:59'
+  timezone: UTC-10
   city: Honolulu
   country: Hawaii
   date: October 19-25, 2025
+  note: All info can be found <a href='https://iccv.thecvf.com/Conferences/2025/CallForPapers'>here</a>.
   tags:
   - machine-learning
   - computer-vision
   rankings: 'CCF: A, CORE: A*, THCPL: A'
+  abstract_deadline: '2025-03-03 23:59:59'
   rebuttal_period_start: '2025-05-10'
   rebuttal_period_end: '2025-05-16'
   final_decision_date: '2025-06-20'
